# last-stanza

./: Cargo.toml  clippy.toml
assets/: asset_sources  fonts.assets.ron  spawn-rates.time.toml  textures.assets.ron
src/: climber.rs  debug.rs  enemies.rs  events.rs  giant.rs  hopper.rs  lib.rs  loading.rs  main.rs  main_camera.rs  menu.rs  player.rs  sfx.rs  world.rs
src/enemies/: climber.rs  enemy_projectile.rs  giant.rs  hopper.rs  lurker.rs
