[package]
name = "last-stanza"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi-threaded",
    "png",
    "x11",
    "serialize"
] }
serde = "*"
# bevy-inspector-egui = "0.12.1"
# bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}
bitflags = "*"
bevy_rapier2d = "0.22.0"
rand = "*"
toml = "*"
# directories = "*"
# spew = "*"
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
bevy_common_assets = { version = "0.7.0", features = ["toml"] }
# bevy_tweening = "*"
benimator = "*"
# hot-lib-reloader = "*"

[profile.dev.package."*"]
opt-level = 3
